fix tutorials on mobile

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,33 +1,9 @@
 /* just-the-docs overrides */
 
-.search-active .main {
-    position: relative;
-}
-
-.search-active .search {
-    z-index: 2000;
-}
-
-.btn-primary {
-    background-image: none;
-}
-
-.site-title {
-    display: none;
-}
-
 a:not([class]) {
     text-decoration-color: inherit;
 }
 
 .btn:hover {
     background-image: none;
-}
-
-.main {
-    margin-top: -50px;
-}
-
-.site-nav {
-    padding-top: 1rem;
 }
